--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.example.testapp'
 }
 
 dependencies {
@@ -62,5 +63,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
+
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
 }
