--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -9,11 +10,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestApp">
+        <activity
+            android:name=".activity.WorkManagerActivity"
+            android:exported="false" />
+
         <service
             android:name=".servicios.ExampleService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
+        <activity
+            android:name=".activity.BroadcastActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.ServiceActivity"
             android:exported="false" />
@@ -29,8 +37,6 @@
         <activity
             android:name=".activity.Interfaz3Activity"
             android:exported="false" />
-
-
         <activity
             android:name=".activity.Tabs"
             android:exported="false" />
